--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,18 +4,35 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/logo"
+        android:layout_width="200dp"
+        android:layout_height="139dp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="139dp"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/logo" />
+    </LinearLayout>
+
     <android.support.design.widget.TextInputLayout
+        android:layout_below="@id/logo"
         android:id="@+id/account_layout"
         android:layout_width="200dp"
         android:layout_height="wrap_content">
+
         <EditText
             android:id="@+id/account_edit"
-            android:hint="@string/account"
+            android:hint="@string/email_account"
             android:textSize="15sp"
             android:textColor="#000000"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
+
     <android.support.design.widget.TextInputLayout
         android:layout_below="@id/account_layout"
         android:id="@+id/password_layout"
@@ -38,4 +55,5 @@
         android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="wrap_content" />
+
 </RelativeLayout>
