--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,10 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tw.com.team13.firebaselogin.Fragment_Profile">
-
-    <!-- TODO: Update blank fragment layout -->
-
+    tools:context="tw.com.team13.firebaselogin.Fragment_Member">
+    
     <Button
         android:id="@+id/addStore_button"
         android:layout_width="141dp"
