--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
-    android:scrollbars="vertical"
-    tools:context=".UploadActivity">
+    android:scrollbars="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
