--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,70 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="139dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="55dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="139dp"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/logo" />
-    </LinearLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_below="@id/logo"
-        android:id="@+id/account_layout"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/account_edit"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/account"
-            android:textColor="#000000"
-            android:textSize="15sp" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_below="@id/account_layout"
-        android:id="@+id/password_layout"
-        android:layout_width="200dp"
+            android:text="註冊新帳號"
+            android:textSize="20dp"
+            android:textColor="@color/black"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="40dp"/>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/account_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText
+                android:id="@+id/input_email"
+                android:hint="@string/email_account"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/username_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText
+                android:id="@+id/input_username"
+                android:hint="@string/full_name"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:passwordToggleEnabled="true">
+            <EditText
+                android:id="@+id/input_password"
+                android:hint="@string/password"
+                android:maxLines="1"
+                android:inputType="textPassword"
+                android:textSize="15sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/button_register"
+            android:text="@string/register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            android:padding="12dp"
+            android:background="@drawable/white_rounded_button"/>
+
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/progressbar"
+        android:layout_centerInParent="true" />
+
+    <TextView
+        android:id="@+id/Registering"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:passwordToggleEnabled="true">
-        <EditText
-            android:id="@+id/password_edit"
-            android:hint="@string/password"
-            android:maxLines="1"
-            android:inputType="textPassword"
-            android:textSize="15sp"
-            android:textColor="#000000"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:layout_below="@id/password_layout"
-        android:id="@+id/name_layout"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/name_edit"
-            android:hint="@string/name"
-            android:textSize="15sp"
-            android:textColor="#000000"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TextInputLayout>
-    <Button
-        android:layout_below="@id/name_layout"
-        android:text="@string/signUp_button"
-        android:id="@+id/signUp_button"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content" />
+        android:text="登入中"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:layout_alignBottom="@+id/progressbar"
+        android:layout_alignRight="@+id/progressbar"
+        android:layout_alignLeft="@+id/progressbar" />
+
+
+
 </RelativeLayout>
