--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black"
+            android:id="@+id/tvConfirmSignout"
+            android:text="確認登出?"/>
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="登出"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/btn_ConfirmSignout"
+            android:layout_below="@+id/tvConfirmSignout"
+            android:background="@drawable/white_rounded_button"
+            android:layout_marginTop="20dp"/>
+
+    </RelativeLayout>
+
+    <ProgressBar
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/progress_bar"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="登出中.."
+        android:textSize="20sp"
+        android:layout_alignBottom="@+id/progress_bar"
+        android:layout_alignRight="@+id/progress_bar"
+        android:layout_alignLeft="@+id/progress_bar"
+        android:textColor="@color/black"
+        android:textAlignment="center"
+        android:id="@+id/tvSigningout"/>
+
+</RelativeLayout>
