--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -13,7 +13,7 @@
     </item>
     <item
         android:id="@+id/ic_like"
-        android:icon="@drawable/ic_active"
+        android:icon="@drawable/ic_addimage"
         android:title="">
     </item>
     <item
