新增 刷新個人主頁功能

--- a/app/src/main/res/layout/snippet_top_profilebar.xml
+++ b/app/src/main/res/layout/snippet_top_profilebar.xml
@@ -22,7 +22,7 @@
                     android:textColor="@color/black"
                     android:layout_marginStart="15dp"
                     android:layout_marginLeft="15dp"
-                    android:id="@+id/profileName"/>
+                    android:id="@+id/username"/>
 
                 <ImageView
                     android:layout_width="30dp"
