--- a/app/src/main/res/layout/fragment_home_test.xml
+++ b/app/src/main/res/layout/fragment_home_test.xml
@@ -3,12 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:textSize="20sp"
-        android:text="Home Fragment"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/relLayout1"
+            android:clickable="true"
+            android:focusable="true">
+
+            <include layout="@layout/snippet_searchbar"/>
+        </RelativeLayout>
+
+
+    </RelativeLayout>
 </RelativeLayout>
