--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,135 +11,137 @@
         android:layout_height="wrap_content"
         android:id="@+id/relLayout1">
 
-        <include layout="@layout/snippet_top_profilebar"/>
+        <include layout="@layout/snippet_searchbar"/>
 
     </RelativeLayout>
 
+
     <RelativeLayout
+        android:id="@+id/relLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relLayout1"
-        android:id="@+id/relLayout2">
+        android:layout_below="@id/relLayout1">
 
-    <FrameLayout
-        android:id="@+id/filter_bar_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/filter_bar"
+        <FrameLayout
+            android:id="@+id/filter_bar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:elevation="12dp"
-            android:foreground="?attr/selectableItemBackground">
+            android:paddingBottom="12dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="12dp">
 
-            <RelativeLayout
+            <android.support.v7.widget.CardView
+                android:id="@+id/filter_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical">
+                android:clickable="true"
+                android:elevation="12dp"
+                android:foreground="?attr/selectableItemBackground">
 
-                <ImageView
-                    android:id="@+id/button_filter"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:padding="8dp"
-                    android:tint="@color/greySecondary"
-                    app:srcCompat="@drawable/ic_filter_list_white_24px" />
+                    android:gravity="center_vertical">
 
-                <LinearLayout
-                    android:id="@+id/text_current_search_container"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="8dp"
-                    android:layout_toRightOf="@+id/button_filter"
-                    android:orientation="vertical"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp">
-
-                    <TextView
-                        android:id="@+id/text_current_search"
-                        style="@style/AppTheme.Body1"
+                    <ImageView
+                        android:id="@+id/button_filter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/all_restaurants"
-                        android:textColor="@color/greySecondary"
-                        tools:text="Filter" />
+                        android:layout_centerVertical="true"
+                        android:padding="8dp"
+                        android:tint="@color/greySecondary"
+                        app:srcCompat="@drawable/ic_filter_list_white_24px" />
 
-                    <TextView
-                        android:id="@+id/text_current_sort_by"
-                        style="@style/AppTheme.Caption"
+                    <LinearLayout
+                        android:id="@+id/text_current_search_container"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/sorted_by_rating"
-                        android:textColor="@color/greyDisabled" />
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="8dp"
+                        android:layout_toRightOf="@+id/button_filter"
+                        android:orientation="vertical"
+                        android:paddingBottom="8dp"
+                        android:paddingTop="8dp">
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/text_current_search"
+                            style="@style/AppTheme.Body1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/all_restaurants"
+                            android:textColor="@color/greySecondary"
+                            tools:text="Filter" />
 
-                <ImageView
-                    android:id="@+id/button_clear_filter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:padding="8dp"
-                    android:tint="@color/greySecondary"
-                    app:srcCompat="@drawable/ic_close_white_24px" />
+                        <TextView
+                            android:id="@+id/text_current_sort_by"
+                            style="@style/AppTheme.Caption"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/sorted_by_rating"
+                            android:textColor="@color/greyDisabled" />
 
-            </RelativeLayout>
+                    </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+                    <ImageView
+                        android:id="@+id/button_clear_filter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:padding="8dp"
+                        android:tint="@color/greySecondary"
+                        app:srcCompat="@drawable/ic_close_white_24px" />
 
-    </FrameLayout>
+                </RelativeLayout>
 
-    <!-- Main Restaurants recycler -->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_restaurants"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/filter_bar_container"
-        android:background="@android:color/white"
-        tools:listitem="@layout/item_restaurant" />
+            </android.support.v7.widget.CardView>
 
-    <!-- Shadow below toolbar -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:layout_below="@+id/filter_bar_container"
-        android:background="@drawable/bg_shadow" />
+        </FrameLayout>
 
-    <!-- Empty list (pizza guy) view -->
-    <LinearLayout
-        android:id="@+id/view_empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/toolbar"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="gone">
+        <!-- Main Restaurants recycler -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_restaurants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/filter_bar_container"
+            android:background="@android:color/white"
+            tools:listitem="@layout/item_restaurant" />
 
-        <ImageView
-            style="@style/AppTheme.PizzaGuy"
-            android:src="@drawable/pizza_monster" />
+        <!-- Shadow below toolbar -->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:layout_below="@+id/filter_bar_container"
+            android:background="@drawable/bg_shadow" />
 
-        <TextView
-            style="@style/AppTheme.Body1"
+        <!-- Empty list (pizza guy) view -->
+        <LinearLayout
+            android:id="@+id/view_empty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/filter_bar_container"
             android:gravity="center"
-            android:text="@string/message_no_results"
-            android:textColor="@color/greyDisabled" />
+            android:orientation="vertical"
+            android:visibility="gone"
+            tools:visibility="gone">
 
-    </LinearLayout>
+            <ImageView
+                style="@style/AppTheme.PizzaGuy"
+                android:src="@drawable/pizza_monster" />
+
+            <TextView
+                style="@style/AppTheme.Body1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/message_no_results"
+                android:textColor="@color/greyDisabled" />
+
+        </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/progress_loading"
@@ -150,7 +152,6 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone" />
 
-    <include layout="@layout/layout_bottom_navigation_view"/>
+    </RelativeLayout>
 
-</RelativeLayout>
 </RelativeLayout>
